# chessbot

./: .gitignore  build.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/gui/: renderer.cpp  renderer.h
src/gui/shaders/: basic.frag  basic.vert
src/types/: board.cpp  board.h  vector.h
